# cajeta

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  build.sh  parse-hierarchy-Example.cajeta  parse-hierarchy-System-simple.cajeta  parse-hierarchy-System.cajeta  setup.sh
antlr4/: CajetaLexer.g4  CajetaParser.g4
cmake/: Antlr4Package.md  FindANTLR.cmake  README.md  antlr4-generator.cmake.in  build.sh
include/AST/: AST.h  ASTContext.h
include/Basic/: Diagnostic.def  Diagnostic.h  LLVM.h  TokenKinds.def  TokenKinds.h  Version.h
include/CodeGen/: CGDebugInfo.h  CGModule.h  CGProcedure.h  CGTBAA.h  CodeGenerator.h
include/Lexer/: Lexer.h  Token.h
include/Parser/: Compiler.h  Package.h  Parser.h
include/Sema/: Scope.h  Sema.h
include/cajeta/: AccessModifier.h  Annotatable.h  Annotation.h  CajetaClass.h  CajetaParserIRListener.h  CajetaParserIRVisitor.h  Class.h  CompilationUnit.h  Declaration.h  Enum.h  Expression.h  Field.cpp  Field.h  FormalParameter.h  Identifier.cpp  Interface.h  Method.h  Modifiable.h  ParseContext.h  QualifiedName.h  Scope.h  Statement.h  StructType.h  Type.h  TypeDefinition.h
include/cajeta/asn/: AbstractSyntaxNode.cpp  AbstractSyntaxNode.h  Block.cpp  Block.h  BlockStatement.cpp  BlockStatement.h  ClassBodyDeclaration.h  DefaultBlock.cpp  DefaultBlock.h  DefaultConstructorBlock.cpp  DefaultConstructorBlock.h  Expression.cpp  Expression.h  LocalVariableDeclaration.cpp  LocalVariableDeclaration.h  Statement.cpp  Statement.h  VariableDeclarator.cpp  VariableDeclarator.h
include/cajeta/ast/: AbstractSyntaxTree.h  Expression.h  FormalParameter.h  Identifier.h  Scope.h  Statement.h
include/cajeta/block/: Block.h  BlockStatement.h  LocalVariable.h
include/cajeta/compile/: CajetaLlvmVisitor.h  CajetaModule.cpp  CajetaModule.h  CajetaParserIRListener.h  Compiler.cpp  Compiler.h
include/cajeta/exception/: CajetaExceptions.h  Exception.cpp  Exception.h  VariableAssignmentException.cpp  VariableAssignmentException.h  VariableCreationException.h
include/cajeta/field/: Field.cpp  Field.h  LocalField.cpp  LocalField.h  LocalPropertyField.cpp  LocalPropertyField.h  LocalStructureField.cpp  LocalStructureField.h
include/cajeta/logging/: CajetaLogger.cpp  CajetaLogger.h
include/cajeta/method/: ArrayDestructorMethod.cpp  ArrayDestructorMethod.h  CreateStructureMetadataMethod.cpp  Method.cpp  Method.h  (+5 more)
lib/Basic/: CMakeLists.txt  Diagnostic.cpp  TokenKinds.cpp  Version.cpp
lib/CodeGen/: CGDebugInfo.cpp  CGModule.cpp  CGProcedure.cpp  CGTBAA.cpp  CMakeLists.txt  CodeGenerator.cpp
lib/Lexer/: CMakeLists.txt  Lexer.cpp
lib/Parser/: CMakeLists.txt  Parser.cpp
lib/Sema/: CMakeLists.txt  Scope.cpp  Sema.cpp
scripts/: run-lli.sh
src/: AbstractSyntaxTree.cpp  AccessModifier.cpp  Annotation.cpp  Block.cpp  BlockStatement.cpp  CMakeLists.txt  CajetaArchive.cpp  CajetaClass.cpp  CajetaModule.cpp  CajetaParserIRListener.cpp  CajetaStructure.cpp  CajetaType.cpp  Class.cpp  CompilationUnit.cpp  Compiler.cpp  Expression.cpp  Field.cpp  FormalParameter.cpp  Generics.cpp  Identifier.cpp  Interface.cpp  LocalTypeDeclaration.cpp  LocalVariable.cpp  LocalVariableDeclaration.cpp  Method.cpp  Modifiable.cpp  Package.cpp  ParseContext.cpp  QualifiedName.cpp  Scope.cpp  Statement.cpp  StructType.cpp  Type.cpp  TypeDefinition.cpp  main.cpp
src/cajeta/asn/: AbstractSyntaxNode.cpp  AbstractSyntaxNode.h  Block.cpp  Block.h  BlockStatement.cpp  BlockStatement.h  ClassBodyDeclaration.cpp  ClassBodyDeclaration.h  DefaultBlock.cpp  DefaultBlock.h  LocalVariableDeclaration.cpp  LocalVariableDeclaration.h  Statement.cpp  Statement.h  VariableDeclarator.cpp  VariableDeclarator.h
src/cajeta/asn/expression/: BinaryOpExpression.cpp  BinaryOpExpression.h  CreatorRest.cpp  CreatorRest.h  DotExpression.cpp  DotExpression.h  Expression.cpp  Expression.h  Identifier.cpp  Identifier.h  LiteralExpression.cpp  LiteralExpression.h  MethodCallExpression.cpp  MethodCallExpression.h  NewExpression.cpp  NewExpression.h
src/cajeta/compile/: CajetaLlvmVisitor.h  CajetaModule.cpp  CajetaModule.h  ClassLoader.cpp  ClassLoader.h  Compiler.cpp  Compiler.h
src/cajeta/error/: CajetaExceptions.h  Exception.cpp  Exception.h  ExplicitCastRequiredException.cpp  ExplicitCastRequiredException.h  FileNotFoundException.cpp  FileNotFoundException.h  InvalidAssignmentException.h  InvalidOperandException.cpp  InvalidOperandException.h  VariableAssignmentException.cpp  VariableAssignmentException.h  VariableCreationException.h
src/cajeta/field/: ArrayStackField.cpp  ArrayStackField.h  Field.cpp  Field.h  HeapField.cpp  HeapField.h  ParameterField.cpp  ParameterField.h  StackField.cpp  StackField.h  StructureField.cpp  StructureField.h
src/cajeta/logging/: CajetaLogger.cpp  CajetaLogger.h
src/cajeta/method/: ArrayConstructorMethod.h  DefaultConstructorMethod.cpp  DefaultConstructorMethod.h  Method.cpp  Method.h
src/cajeta/type/: Annotatable.h  CajetaArray.cpp  CajetaArray.h  CajetaClass.cpp  CajetaClass.h  CajetaEnum.h  CajetaInterface.cpp  CajetaInterface.h  CajetaStructure.cpp  CajetaStructure.h  CajetaType.cpp  CajetaType.h  FormalParameter.cpp  FormalParameter.h  Generics.cpp  Generics.h  Modifiable.h  QualifiedName.cpp  QualifiedName.h  Scope.cpp  Scope.h  ScopeStack.cpp  ScopeStack.h  StructureMetadata.cpp  StructureMetadata.h  StructureProperty.cpp  StructureProperty.h
src/cajeta/util/: FileStream.cpp  FileStream.h  MemoryManager.cpp  MemoryManager.h  Printer.cpp  Printer.h
test/: CMakeLists.txt  CajetaUnitTest.cpp  CajetaUnitTest.h  TestClass.cajeta  TestClass.java  TestPlan.md
test/code/src/cajeta/: Collection.cajeta  Example.cajeta  String.cajeta  System.cajeta
test/code/src/com/entity/app/component/: TestClass.cajeta
test/code/test/: AdvancedTestClass.cajeta
test/compile/: CompilerTests.cpp  compile.cpp
test/compile/cajeta/src/cajeta/: System.cajeta
test/compile/code/src/cajeta/: System.cajeta
test/compile/code/src/foo/bar/baz/: System.cajeta
tools/driver/: Driver.cpp
util/: AnotherClass.cpp  AnotherClass.h  TestCppClass.cpp  TestCppClass.hpp  cpp-to-llvm.sh
(+60 files in other folders)
